# c-test

./: .gitignore  1query.sql  Cargo.toml  LICENSE  README.md
src/: database.rs  main.rs  models.rs  utils.rs
src/ui/: about.rs  app.rs  app_broken.rs  components.rs  dashboard.rs  insertions.rs  login.rs  login_backup.rs  login_old.rs  mod.rs  queries.rs  sidebar.rs  theme.rs
