[package]
name = "db-manager-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
rfd = "0.14"
config = "0.14"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
